# zoppy-ops-teste

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
src/: main.py
src/api/requests/: copy_sms_request.py  copy_wpp_request.py  linkedin_post_request.py  plan_action_90d_request.py
src/api/response/: copy_sms_response.py  copy_wpp_response.py  plan_action_90d_response.py
src/api/routes/: copy_sms_controller.py  copy_wpp_controller.py  linkedin_post_controller.py  plan_action_90d_controller.py
src/config/: auth.py  settings.py
src/core/agents/: company_status_agent.py  copywriter_agent.py  copywriter_sms_agent.py  linkedin_post_agent.py  plan_action_90d_agent.py  prompt_builder_agent.py  prompt_builder_sms_agent.py  variable_suggester_agent.py  variable_suggester_sms_agent.py
src/core/prompts/: company_status_prompt.py  copywriter_prompt.py  copywriter_sms_prompt.py  plan_action_90d_prompt.py  prompt_builder_prompt.py  prompt_builder_sms_prompt.py  variable_suggester_prompt.py  variable_suggester_sms_prompt.py
src/core/tools/: index_zoppy_docs.py  markdown_to_docx.py
src/core/utils/: langsmith_helper.py
src/core/workflows/: copy_sms_workflow.py  copy_wpp_workflow.py  generate_action_plan_workflow.py
src/scripts/: index_docs.py
